feat(encryption): ciphertext format + SSTable footer scope signalling (WD-02) (#50)
* plan(encryption): specify WD-02 — ciphertext format + SSTable footer scope signalling

Brings WD-02 (implement-encryption-lifecycle) from DRAFT to SPECIFIED through
two architect sessions, one adversarially-hardened spec, and @spec annotation
coverage across the existing encryption layer. Scope expanded after initial
domain scan revealed `encryption.primitives-lifecycle` R22b/R23a require SSTable
footer scope metadata + Table-catalog scope exposure — unimplemented infrastructure
that belongs to WD-02's remit.

ADRs confirmed (2):
- sstable-footer-scope-format — v5→v6 format bump with fixed-position scope
  section; CRC32C-covered via existing v5 section-checksum scheme
- table-handle-scope-exposure v2 — TableMetadata extended with
  Optional<EncryptionMetadata>; sealed Table with sole permitted CatalogTable
  subtype (Pass 2 falsification found runtime-check insufficient; sealed type
  gives compile-time trust boundary)

Spec authored (1):
- sstable.footer-encryption-scope v4 APPROVED — 53 requirements, hardened
  through 4 adversarial passes (21 findings addressed): magic-dispatch,
  byte-layout bounds, DEK version set, reader scope validation, engine API,
  sealed-Table trust boundary, threat-model boundary (Model 2: active tamper
  delegated to storage substrate), catalog persistence with format-version
  monotonicity, writer invariants with single-lock atomicity + double-fsync
  commit barrier + no-restart-resume

Deferred ADR stubs filed (3):
- encryption-granularity-per-field-vs-per-block — per-block AES-GCM transition
- encryption-disable-policy — in-place disable (encryption is one-way)
- sstable-active-tamper-defence — manifest MAC / per-block AEAD for active
  on-disk tamper

Annotation coverage:
- Legacy @spec F*.R* migration: 12 compound annotations rewritten, 9
  migration-breadcrumb comments removed
- encryption.ciphertext-envelope: 11 → 35 annotations across impl + t